--- a/environment.yml
+++ b/environment.yml
@@ -2,17 +2,20 @@ name: sgr
 channels:
   - pytorch
   - nvidia
+  - conda-forge
   - defaults
 dependencies:
+  - python=3.9
   - _libgcc_mutex=0.1=main
   - _openmp_mutex=5.1=1_gnu
   - blas=1.0=mkl
-  - bottleneck=1.3.7=py312ha883a20_0
-  - brotli-python=1.0.9=py312h6a678d5_8
+  - bottleneck=1.3.7=py39ha9d4c09_0
+  - brotli-python=1.0.9=py39h6a678d5_8
   - bzip2=1.0.8=h5eee18b_6
-  - ca-certificates=2024.7.2=h06a4308_0
-  - certifi=2024.7.4=py312h06a4308_0
+  - ca-certificates=2024.8.30=hbcca054_0
+  - certifi=2024.8.30=pyhd8ed1ab_0
   - charset-normalizer=3.3.2=pyhd3eb1b0_0
+  - colorama=0.4.6=pyhd8ed1ab_0
   - cuda-cudart=12.1.105=0
   - cuda-cupti=12.1.105=0
   - cuda-libraries=12.1.0=0
@@ -21,15 +24,17 @@ dependencies:
   - cuda-opencl=12.5.39=0
   - cuda-runtime=12.1.0=0
   - cuda-version=12.5=3
-  - expat=2.6.2=h6a678d5_0
   - ffmpeg=4.3=hf484d3e_0
-  - filelock=3.13.1=py312h06a4308_0
+  - filelock=3.13.1=py39h06a4308_0
   - freetype=2.12.1=h4a9f257_0
+  - fsspec=2024.9.0=pyhff2d567_0
   - gmp=6.2.1=h295c915_3
+  - gmpy2=2.1.2=py39heeb90bb_0
   - gnutls=3.6.15=he1e5248_0
-  - idna=3.7=py312h06a4308_0
+  - huggingface_hub=0.24.7=pyhd8ed1ab_0
+  - idna=3.7=py39h06a4308_0
   - intel-openmp=2023.1.0=hdb19cb5_46306
-  - jinja2=3.1.4=py312h06a4308_0
+  - jinja2=3.1.4=py39h06a4308_0
   - jpeg=9e=h5eee18b_2
   - lame=3.100=h7b6447c_0
   - lcms2=2.12=h3be6417_0
@@ -44,6 +49,8 @@ dependencies:
   - libdeflate=1.17=h5eee18b_1
   - libffi=3.4.4=h6a678d5_1
   - libgcc-ng=11.2.0=h1234567_1
+  - libgfortran-ng=7.5.0=ha8ba4b0_17
+  - libgfortran4=7.5.0=ha8ba4b0_17
   - libgomp=11.2.0=h1234567_1
   - libiconv=1.16=h5eee18b_3
   - libidn2=2.3.4=h5eee18b_0
@@ -56,93 +63,133 @@ dependencies:
   - libtasn1=4.19.0=h5eee18b_0
   - libtiff=4.5.1=h6a678d5_0
   - libunistring=0.9.10=h27cfd23_0
-  - libuuid=1.41.5=h5eee18b_0
   - libwebp-base=1.3.2=h5eee18b_0
   - llvm-openmp=14.0.6=h9e868ea_0
   - lz4-c=1.9.4=h6a678d5_1
-  - markupsafe=2.1.3=py312h5eee18b_0
+  - markupsafe=2.1.3=py39h5eee18b_0
   - mkl=2023.1.0=h213fc3f_46344
-  - mkl-service=2.4.0=py312h5eee18b_1
-  - mkl_fft=1.3.8=py312h5eee18b_0
-  - mkl_random=1.2.4=py312hdb19cb5_0
-  - mpmath=1.3.0=py312h06a4308_0
+  - mkl-service=2.4.0=py39h5eee18b_1
+  - mkl_fft=1.3.8=py39h5eee18b_0
+  - mkl_random=1.2.4=py39hdb19cb5_0
+  - mpc=1.1.0=h10f8cd9_1
+  - mpfr=4.0.2=hb69a4c5_1
+  - mpi=1.0=mpich
+  - mpi4py=3.1.4=py39hfc96bbd_0
+  - mpich=3.3.2=hc856adb_0
+  - mpmath=1.3.0=py39h06a4308_0
   - ncurses=6.4=h6a678d5_0
   - nettle=3.7.3=hbbd107a_1
-  - networkx=3.3=py312h06a4308_0
-  - numexpr=2.8.7=py312hf827012_0
-  - numpy=1.26.4=py312hc5e2394_0
-  - numpy-base=1.26.4=py312h0da6c21_0
+  - networkx=3.2.1=py39h06a4308_0
+  - numexpr=2.8.7=py39h85018f9_0
+  - numpy=1.26.4=py39h5f9d8c6_0
+  - numpy-base=1.26.4=py39hb5e798b_0
   - openh264=2.1.1=h4ff587b_0
   - openjpeg=2.4.0=h9ca470c_2
-  - openssl=3.0.14=h5eee18b_0
-  - pandas=2.2.2=py312h526ad5a_0
-  - pillow=10.4.0=py312h5eee18b_0
-  - pip=24.0=py312h06a4308_0
-  - pysocks=1.7.1=py312h06a4308_0
-  - python=3.12.4=h5148396_1
-  - python-dateutil=2.9.0post0=py312h06a4308_2
+  - openssl=3.0.15=h5eee18b_0
+  - packaging=24.1=pyhd8ed1ab_0
+  - pandas=2.2.2=py39h6a678d5_0
+  - pillow=10.4.0=py39h5eee18b_0
+  - pip=24.0=py39h06a4308_0
+  - pysocks=1.7.1=py39h06a4308_0
+  - python=3.9.19=h955ad1f_1
+  - python-dateutil=2.9.0post0=py39h06a4308_2
   - python-tzdata=2023.3=pyhd3eb1b0_0
-  - pytorch=2.4.0=py3.12_cuda12.1_cudnn9.1.0_0
+  - pytorch=2.4.0=py3.9_cuda12.1_cudnn9.1.0_0
   - pytorch-cuda=12.1=ha16c6d3_5
   - pytorch-mutex=1.0=cuda
-  - pytz=2024.1=py312h06a4308_0
-  - pyyaml=6.0.1=py312h5eee18b_0
+  - pytz=2024.1=py39h06a4308_0
+  - pyyaml=6.0.1=py39h5eee18b_0
   - readline=8.2=h5eee18b_0
-  - requests=2.32.3=py312h06a4308_0
-  - setuptools=69.5.1=py312h06a4308_0
+  - requests=2.32.3=py39h06a4308_0
+  - setuptools=69.5.1=py39h06a4308_0
   - six=1.16.0=pyhd3eb1b0_1
   - sqlite=3.45.3=h5eee18b_0
-  - sympy=1.12=py312h06a4308_0
+  - sympy=1.12=py39h06a4308_0
   - tbb=2021.8.0=hdb19cb5_0
   - tk=8.6.14=h39e8969_0
-  - torchaudio=2.4.0=py312_cu121
-  - torchtriton=3.0.0=py312
-  - torchvision=0.19.0=py312_cu121
-  - typing_extensions=4.11.0=py312h06a4308_0
-  - tzdata=2024a=h04d1e81_0
-  - urllib3=2.2.2=py312h06a4308_0
-  - wheel=0.43.0=py312h06a4308_0
+  - torchaudio=2.4.0=py39_cu121
+  - torchtriton=3.0.0=py39
+  - torchvision=0.19.0=py39_cu121
+  - typing-extensions=4.11.0=py39h06a4308_0
+  - typing_extensions=4.11.0=py39h06a4308_0
+  - wheel=0.43.0=py39h06a4308_0
   - xz=5.4.6=h5eee18b_1
   - yaml=0.2.5=h7b6447c_0
   - zlib=1.2.13=h5eee18b_1
   - zstd=1.5.5=hc292b87_2
   - pip:
-    - blobfile==2.1.1
-    - ci-info==0.3.0
+    - "skm-tea @ git+https://github.com/StanfordMIMI/skm-tea@main"
+    - aiohappyeyeballs==2.4.3
+    - aiohttp==3.10.8
+    - aiosignal==1.3.1
+    - asciitree==0.3.3
+    - async-timeout==4.0.3
+    - attrs==23.2.0
+    - beautifulsoup4==4.12.3
+    - boto3==1.34.149
+    - botocore==1.34.149
     - click==8.1.7
+    - coloredlogs==15.0.1
     - contourpy==1.2.1
     - cycler==0.12.1
-    - dosma==0.1.2
+    - docker-pycreds==0.4.0
     - et-xmlfile==1.1.0
-    - etelemetry==0.3.1
+    - fasteners==0.19
+    - flatbuffers==24.3.25
     - fonttools==4.53.1
+    - frozenlist==1.4.1
+    - gdown==4.5.4
+    - gitdb==4.0.11
+    - gitpython==3.1.43
     - h5py==3.11.0
+    - humanfriendly==10.0
     - imageio==2.34.2
-    - isodate==0.6.1
+    - importlib-metadata==8.2.0
+    - importlib-resources==6.4.0
+    - iocursor==0.1.4
+    - jmespath==1.0.1
     - kiwisolver==1.4.5
     - lazy-loader==0.4
-    - looseversion==1.3.0
-    - lxml==4.9.4
+    - lpips==0.1.4
+    - lxml==5.2.2
+    - markdown==3.6
     - matplotlib==3.9.1
-    - natsort==8.4.0
-    - nested-lookup==0.2.25
-    - nibabel==5.2.1
-    - nipype==1.8.6
+    - medpy==0.4.0
+    - monai==1.3.2
+    - multidict==6.1.0
+    - numcodecs==0.12.1
+    - onnx==1.14.0
+    - onnxruntime==1.15.1
+    - onnxruntime-gpu==1.18.0
+    - onnxslim==0.1.31
+    - opencv-python==4.10.0.84
     - openpyxl==3.1.5
-    - packaging==24.1
-    - pmw==2.1.1
-    - prov==2.0.1
-    - pycryptodomex==3.20.0
-    - pydicom==2.4.4
-    - pydot==3.0.1
+    - platformdirs==4.3.2
+    - protobuf==5.28.1
+    - psutil==6.0.0
+    - py-cpuinfo==9.0.0
+    - pydeprecate==0.3.2
     - pyparsing==3.1.2
-    - rdflib==6.3.2
+    - pytorch-lightning==1.7.7
+    - pywavelets==1.6.0
+    - s3transfer==0.10.2
     - scikit-image==0.24.0
-    - scipy==1.14.0
+    - scipy==1.13.1
     - seaborn==0.13.2
-    - simplejson==3.19.2
+    - sentry-sdk==2.14.0
+    - setproctitle==1.3.3
+    - simpleitk==2.4.0
+    - skm-tea==0.0.3
+    - smmap==5.0.1
+    - soupsieve==2.6
     - tabulate==0.9.0
-    - termcolor==2.4.0
     - tifffile==2024.7.24
     - tqdm==4.66.4
-    - traits==6.3.2
+    - tzdata==2024.1
+    - urllib3==1.26.19
+    - wandb==0.17.9
+    - werkzeug==3.0.3
+    - xlrd==2.0.1
+    - yarl==1.13.1
+    - zarr==2.18.2
+    - zipp==3.19.2
